--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -12,7 +12,7 @@
     "### W02D1 SQL\n",
     "\n",
     "Instructor: Socorro Dominguez  \n",
-    "May 03, 2021"
+    "June 28, 2021"
    ]
   },
   {
@@ -298,6 +298,17 @@
     }
    },
    "source": [
+    "# Break (Or make sure you install Postgres)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Exercise"
    ]
   },
@@ -377,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -386,10 +397,10 @@
    "outputs": [],
    "source": [
     "import psycopg2\n",
-    "import config as cfg\n",
+    "#import config as cfg\n",
     "import pandas as pd\n",
     "\n",
-    "postgres_pwd = cfg.postgres['password'] # This is the password you entered when you set up PGSQL\n",
+    "postgres_pwd = 'postgres' # This is the password you entered when you set up PGSQL\n",
     "\n",
     "con = psycopg2.connect(database='drinks', user='postgres', password=postgres_pwd,\n",
     "                       host='127.0.0.1', port='5432')  # This should work if you left everything as default\n",
@@ -397,17 +408,6 @@
     "cur = con.cursor()\n",
     "\n",
     "#cur.execute(open('drinks.sql', 'r').read())  # Uncomment this the first time you run the db"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Break (Or make sure you install Postgres)"
    ]
   },
   {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -538,7 +538,7 @@
        " ('person 1', '2016-10-22', 'bar 19', 'drink 42', 2)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -662,7 +662,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42    2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42         2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,8 +813,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -955,7 +959,7 @@
        "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1111,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -1195,7 +1199,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1280,7 +1284,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1369,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1451,7 +1455,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
