--- a/W10D2/W10D2_RecommendationEngines2.ipynb
+++ b/W10D2/W10D2_RecommendationEngines2.ipynb
@@ -91,7 +91,7 @@
     }
    },
    "source": [
-    "## Let the problems begin: _Sparsity_\n",
+    "## Our main problem: _Sparsity_\n",
     "\n",
     "- The thing is: we cannot expect that users will interact with most items;\n",
     "    - Nobody has watched the whole (or the vast majority of the) catalogue of Netflix videos;\n",
@@ -208,19 +208,43 @@
     }
    },
    "source": [
+    "* If you read specific articles.\n",
+    "* The representations of these articles as vectors will be similar to some other article representations as vectors.\n",
+    "* A measure like cosine similarity is used to find similar articles.\n",
+    "* These similar articles are then recommended to you if you haven’t read them to improve your engagement with the website or article medium."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "![img](img/CBF.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "#### Advantages\n",
     "\n",
-    "- You don't need a buch of users to train your model;\n",
+    "- You don't need a lot of users to train your model.\n",
     "\n",
     "\n",
-    "- Each user is modeled separately, so you might be able to capture uniqueness of taste;\n",
+    "- Each user is modeled separately, so you might be able to capture uniqueness of taste.\n",
     "\n",
     "\n",
-    "- Since you can obtain the features of the items, you can immediately recommend new items;\n",
+    "- Since you can obtain the features of the items, you can immediately recommend new items.\n",
     "\n",
     "\n",
-    "- You can explain to the users why you are recommending an item\n",
-    "   - Remember: you learned $\\beta$;"
+    "- You can explain to the users why you are recommending an item."
    ]
   },
   {
@@ -236,13 +260,10 @@
     "- Feature acquisition:\n",
     "    - What features should you use to explain the different ratings?\n",
     "    - Obtaining those features for each item might be very expensive. \n",
-    "    \n",
-    "    \n",
+    "       <br>  <br>\n",
     "- Low diversity: hardly recommend an item outside the user's profile.\n",
     "    - What if a user has an eclectic taste?\n",
-    "\n",
-    "\n",
-    "\n",
+    " <br>  <br>\n",
     "- Cold start: you don't have any information about new users, what to do?"
    ]
   },
@@ -254,7 +275,7 @@
     }
    },
    "source": [
-    "## Collaborative filtering (Review)\n",
+    "## Collaborative Filtering: Memory Based Approach\n",
     "- User-user\n",
     "- Item-item\n",
     "- Latent-factors"
@@ -268,10 +289,15 @@
     }
    },
    "source": [
-    "- Use knowledge of a user’s past purchases/selections to recommend what similar users did (user-based recommendation).\n",
+    "Memory-based collaborative filtering computes similarities between users or items and predicts a new rating for an item by taking the weighted average of ratings from the similar group. \n",
+    "<br><br>\n",
     "\n",
+    "- Use knowledge of a user’s past selections to recommend what similar users did (user-based recommendation).\n",
+    "<br><br>\n",
+    "- For item-based filtering: “users who preferred a certain item also liked…”\n",
+    "<br><br>\n",
     "- The recommendations will be based on the utility matrix.\n",
-    "\n",
+    "<br><br>\n",
     "- The idea is to find similar items or similar users to make your recommendations, hence collaborative.\n",
     "    - Symmetry: movies are features to users and users are features to movies."
    ]
@@ -301,15 +327,10 @@
     }
    },
    "source": [
-    "### Item-to-item\n",
+    "- User-based filtering first selects a user and finds users who have similar rating patterns. The recommender system then can suggest items that those similar users liked.\n",
     "\n",
-    "- Suppose you want to predict the rating that a user (Sophie) would give to a movie (Bird Box)\n",
-    "\n",
-    "\n",
-    "- Here is one approach:\n",
-    "    1. Calculate the similarity between Bird Box and each one of the movies.\n",
-    "    2. Next, select the $k$ movies that are  most similar to Bird Box and that were also rated by Sophie.\n",
-    "    3. Aggregate these ratings."
+    "-\n",
+    "Item-based filtering, on the other hand, takes an item first and finds users who "
    ]
   },
   {
@@ -322,12 +343,46 @@
    "source": [
     "### User-to-user\n",
     "\n",
-    "- Suppose you want to predict the rating that Sophie would give to Bird Box.\n",
+    "User-based filtering first selects a user and finds users who have similar rating patterns. The recommender system then can suggest items that those similar users liked.\n",
     "\n",
-    "- You could also base your filtering on the users:\n",
+    "* The process is to calculate the similarities between target user i and all other users, select the top X similar users, and take the weighted average of ratings from these X users with similarities as weights.\n",
+    "<br><br>\n",
+    "* While different people may have different baselines when giving ratings, some people tend to give high scores generally, some are pretty strict even though they are satisfied with items. To avoid this bias, we can subtract each user’s average rating of all items when computing weighted average, and add it back for target user.\n",
+    "\n",
+    "\n",
+    "- Suppose you want to predict the rating that Sophie would give to Shrek.\n",
+    "\n",
+    "- Here is one approach:\n",
     "    1. Calculate the similarity of Sophie with each one of the users.\n",
-    "    3. Next, select the $k$ users that are most similar to Sophie and also rated Bird Box.\n",
+    "    3. Next, select the $k$ users that are most similar to Sophie and also rated Shrek.\n",
     "    2. Aggregate their ratings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Item-to-item\n",
+    "\n",
+    "- Item-based filtering takes an item first and finds users who liked the particular item, then searches other items that those users also liked.\n",
+    "\n",
+    "- Item based collaborative filtering was introduced 1998 by Amazon. \n",
+    "\n",
+    "- Item based filtering looks at the similarity between different items, and does this by taking note of how many users that chose item X also chose item Y. \n",
+    "\n",
+    "- If the correlation is high enough, a similarity can be presumed to exist between the two items, and they can be assumed to be similar to one another.\n",
+    "\n",
+    "* E.g. Suppose you want to predict the rating that a user (Sophie) would give to a movie (Shrek)\n",
+    "\n",
+    "\n",
+    "- Here is one approach:\n",
+    "    1. Calculate the similarity between Shrek and each one of the movies in our matrix.\n",
+    "    2. Next, select the $k$ movies that are  most similar to Shrek and that were also rated by Sophie.\n",
+    "    3. Aggregate these ratings."
    ]
   },
   {
@@ -450,10 +505,7 @@
     "    - In other words, how frequently should you update your utility matrix?\n",
     "    \n",
     "    \n",
-    "- **Persistence:** How long do you want to keep an item in your recommended list?\n",
-    "\n",
-    "\n",
-    "- See? We have to consider many different things;"
+    "- **Persistence:** How long do you want to keep an item in your recommended list?"
    ]
   },
   {
@@ -536,9 +588,19 @@
     }
    },
    "source": [
-    "## SVD\n",
+    "## Model Based Collaborative Filtering\n",
     "\n",
-    "The Singular Value Decomposition (SVD) decreases the dimension of the utility matrix A by extracting its latent factors"
+    "Our task: decreases the dimension of the utility matrix A by extracting its latent factors\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example of Matrix Factorization using PCA \n",
+    "\n",
+    "![img](img/0_pca.png)"
    ]
   },
   {
@@ -555,14 +617,27 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to do this using `Matrix Factorization` reducing the `Movie Ratings Matrix` into `Movies` and `Users Matrix`.\n",
+    "\n",
+    "These Matrices will be dense representations of the Movie Ratings Matrix.\n",
+    "\n",
+    "\n",
+    "![img](img/SVD01.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "- We are going to use the utility matrix to find latent factors that explain the ratings.\n",
-    "    - in other words, we are trying to learn the features!"
+    "### How our data looks like?\n",
+    "\n",
+    "![img](img/SVD03.png)"
    ]
   },
   {
@@ -576,18 +651,6 @@
     "- We've seen that if we had the user profile, we can learn the movie profile $\\hat{X}$ \n",
     "\n",
     "- Or if we had the movie profile, we could learn the user profile $\\hat{\\beta}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- But what if we don't have the movies' nor the users' profiles?\n",
-    "    - Well, let's try to learn them, right?"
    ]
   },
   {
@@ -637,11 +700,31 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### SVD\n",
+    "\n",
+    "* The Singular Value Decomposition (SVD) decreases the dimension of the utility matrix A by extracting its latent factors\n",
+    "<br><br>\n",
+    "\n",
+    "**WARNING:** This is not SVD in reality.\n",
+    "* Actual SVD works on filled data in matrices like PCA does.\n",
+    "* This algorithm is inspired from SVD."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
     }
    },
    "source": [
-    "- We are learning $k$ new features that will help explain the variation of ratings;"
+    "- Standaard matrix factorization approaches won't work because of the missing values.\n",
+    "\n",
+    "- We'll estimate matrix factorization using an iterative algorithm."
    ]
   },
   {
@@ -652,10 +735,23 @@
     }
    },
    "source": [
-    "#### But what are those features / latent factors?\n",
+    "#### Estimating a Matrix Factorization\n",
     "\n",
-    "- You can think they are new features, just like the intuitive ones!\n",
-    "    - It just happens that we don't know an intuitive interpretation for them!"
+    "1. Set all elements in your User and Movie matrices to random numbers.\n",
+    "$$\\hat{X}_{(n\\times k)}\\hat{\\beta}_{(k\\times m)}$$\n",
+    "\n",
+    "<br><br>\n",
+    "$\\hat{X}_{(n\\times k)}\\hat{\\beta}_{(k\\times m)}$ will result in random numbers\n",
+    "\n",
+    "2. Create a \"cost function\" that checks how far off$ \\hat{beta} x \\hat{X}$ currently is from equaling the known values of the Movie Rating matrix.\n",
+    "\n",
+    "3. Using a numerical optimization algorithm, tweak the numbers in your matrices a little at a time; the goal is to get your \"cost function\" closer to zero.\n",
+    "\n",
+    "4. Repeat until we can't reduce the cost function any more.\n",
+    "\n",
+    "$$\n",
+    "Y^T \\approx \\hat{X}_{(n\\times k)}\\hat{\\beta}_{(k\\times m)}\n",
+    "$$"
    ]
   },
   {
@@ -700,35 +796,107 @@
     }
    },
    "source": [
-    "# SVD Demo\n",
+    "### Visual SVD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Each movies has different genres like comedy and action with a specified rating precalculated.\n",
+    "\n",
+    "User also has a preference for these genres like ‘I like comedy or I dislike it’. Only the like score is added into the rating.\n",
+    "\n",
+    "![img](img/SVD04.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get a final rating matrix like so.\n",
+    "\n",
+    "Basically, the right matrix can be factorized into the 2 left matrices\n",
+    "\n",
+    "![img](img/SVD05.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to get target matrix on right decomposed into 2 matrices\n",
+    "We need to find 2 matrices which when multiplied give us the target matrix\n",
+    "How do we do this?\n",
+    "\n",
+    "![img](img/SVD06.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get a final rating matrix like so.\n",
+    "\n",
+    "Basically, the right matrix can be factorized into the 2 left matrices\n",
+    "\n",
+    "We start with random matrices and use gradient descent to find right values to get the correct target matrix\n",
+    "\n",
+    "![img](img/SVD07.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see we get 1.44 instead of 3\n",
+    "This needs to be corrected.\n",
+    "![img](img/SVD08.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient descent will update values in the non target matrices.\n",
+    "With enough iterations we will reach the right values.\n",
+    "\n",
+    "![img](img/SVD09.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![img](img/SVD10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same technique can be used to factorize empty target matrices as well.\n",
+    "Thus we get right factored matrices from random ones.\n",
+    "When multiplied these give ratings for all users.\n",
+    "![img](img/SVD11.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Truncated SVD Demo\n",
     "\n",
     "Performs linear dimensionality reduction by means of truncated singular value decomposition (SVD).  \n",
     "This estimator does not center the data before computing the singular value decomposition. This means it can work with sparse matrices efficiently."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "We would like to do something like PCA\n",
-    "\n",
-    "![img](img/0_pca.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "But we can't because we have something more like this;\n",
-    "![im](img/1_pca2.png)"
    ]
   },
   {
@@ -748,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -766,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -849,7 +1017,7 @@
        "4       1       50     5.0  964982931"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -946,7 +1114,7 @@
        "5                                             Comedy  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -984,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1031,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1052,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1069,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1094,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1107,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1120,7 +1288,7 @@
        "array([2353,  546,  615, 1756,  622])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1146,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1170,11 +1338,11 @@
       "\n",
       "\n",
       "SVD(k=100): \n",
+      "\tToy Story 2 (1999)                                 Total stars: 374.5\n",
       "\tMission: Impossible (1996)                         Total stars: 573.0\n",
       "\tIndependence Day (a.k.a. ID4) (1996)               Total stars: 696.0\n",
-      "\tToy Story 2 (1999)                                 Total stars: 374.5\n",
       "\tWilly Wonka & the Chocolate Factory (1971)         Total stars: 461.0\n",
-      "\tTwister (1996)                                     Total stars: 408.5\n",
+      "\tBabe (1995)                                        Total stars: 467.5\n",
       "\n",
       "\n",
       "\n",
