--- a/W03D1/W03D1-DataViz.ipynb
+++ b/W03D1/W03D1-DataViz.ipynb
@@ -11,7 +11,7 @@
     "## Lighthouse Labs\n",
     "### W03D1 Data Visualization I\n",
     "Instructor: Socorro Dominguez  \n",
-    "June 07, 2021"
+    "July 05, 2021"
    ]
   },
   {
@@ -25,7 +25,6 @@
     "## Agenda\n",
     "1. Why effective visualization?\n",
     "*  Different types of visualization\n",
-    "*  Break\n",
     "*  Principles of effective visualization\n",
     "*  Demo of popular libraries"
    ]
@@ -92,20 +91,6 @@
     "\n",
     "### What's wrong with this picture?\n",
     "\n",
-    "<img src='imgs/cbc-election-results.jpg' width=800>\n",
-    "\n",
-    "Source: [@JohnSakaluk](https://twitter.com/JohnSakaluk/status/1186520058547171330)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### What's wrong with this picture?\n",
     "\n",
     "<img src='imgs/wrong_chart.png' width=800>"
    ]
@@ -122,7 +107,7 @@
     "\n",
     "- **Visualizing x-y relationships**: scatterplot, bubble chart\n",
     "- **Visualizing distributions**: histograms, density plots, boxplots\n",
-    "- **Categorical plots**: bar plots, box plots\n",
+    "- **Categorical plots**: bar plots, boxplots\n",
     "- **Visualizing geospatial data**: choropleth, cartogram\n",
     "\n",
     "There are a lot of types!"
@@ -217,28 +202,6 @@
     "    - x-axis: Business unit by continent, grouped by continent\n",
     "    - y-axis: Sales in USD\n",
     "    - color: Each business unit gets a different color"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Exercise:\n",
-    "\n",
-    "- 4 groups: distributions, proportions, x-y relationships, geospatial data\n",
-    "- Pick 1 simple chart and 1 complex chart and show us:\n",
-    "    - Example\n",
-    "    - What would be the x/y axis\n",
-    "    - What other encodings (color, size) are used / can be used\n",
-    "- Presentation: 5 minutes each, no need to prep slides, walk through it while on the website\n",
-    "- Prep: 15 minutes, we'll reconvene at _______\n",
-    "- Zoom breakout groups: I'll activate and assign topics via Zoom chat\n",
-    "\n",
-    "Directory of Visualizations: https://serialmentor.com/dataviz/directory-of-visualizations.html"
    ]
   },
   {
@@ -475,8 +438,8 @@
     "## Principle 4: Label clearly\n",
     "\n",
     "#### Example 1a: Every figure needs a title\n",
-    "\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "<img src='imgs/corruption-development-1.png' width=600>\n"
    ]
   },
@@ -491,8 +454,8 @@
     "## Principle 4: Label clearly\n",
     "\n",
     "#### Example 1b: Every figure needs a title\n",
-    "\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "<img src='imgs/corruption-development-infographic-1.png' width=600>\n"
    ]
   },
@@ -507,6 +470,8 @@
     "## Principle 4: Label clearly\n",
     "\n",
     "#### Example 2a: Axes labels\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "\n",
     "<img src='imgs/tech-stocks-minimal-labeling-bad-1.png' width=500>\n"
@@ -523,7 +488,8 @@
     "## Principle 4: Label clearly\n",
     "\n",
     "#### Example 2b: Axes labels\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "<img src='imgs/tech-stocks-minimal-labeling-1.png' width=500>\n"
    ]
@@ -539,6 +505,8 @@
     "## Principle 4: Label clearly\n",
     "\n",
     "#### Example 3: Useful legends\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "\n",
     "<img src='imgs/blue-jays-scatter-bubbles2-1.png' width=500>\n"
@@ -567,7 +535,18 @@
     "- `pandas`: [visualization tutorial](https://pandas.pydata.org/docs/getting_started/intro_tutorials/04_plotting.html#min-tut-04-plotting)\n",
     "- `seaborn`: [quick intro tutorial](https://seaborn.pydata.org/introduction.html) and [detailed tutorials](https://seaborn.pydata.org/tutorial.html)\n",
     "- `plotly`: [Plotly Express tutorial](https://plotly.com/python/plotly-express/)\n",
-    "- Source for this lecture: [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/index.html)"
+    "- Source for this lecture: [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/index.html)\n",
+    "- Tutorial for altair: [Altair](https://viz-learn.mds.ubc.ca/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "plotly graph objects \n",
+    "\n",
+    "\n",
+    "plotly express"
    ]
   },
   {
