--- a/W07D2/Boston_Model.ipynb
+++ b/W07D2/Boston_Model.ipynb
@@ -11,7 +11,7 @@
     "## Lighthouse Labs\n",
     "### W07D2 Deployment of ML Models\n",
     "Instructor: Socorro Dominguez  \n",
-    "April 13, 2021"
+    "June 08, 2021"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4  396.90  5.33  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -341,7 +341,7 @@
        "4     18.7  396.90   5.33  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRIM</th>\n",
+       "      <th>ZN</th>\n",
+       "      <th>INDUS</th>\n",
+       "      <th>CHAS</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>RM</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DIS</th>\n",
+       "      <th>RAD</th>\n",
+       "      <th>TAX</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>B</th>\n",
+       "      <th>LSTAT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00632</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.538</td>\n",
+       "      <td>6.575</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>296.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>396.9</td>\n",
+       "      <td>4.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CRIM    ZN  INDUS  CHAS    NOX     RM   AGE   DIS  RAD    TAX  PTRATIO  \\\n",
+       "0  0.00632  18.0   2.31   0.0  0.538  6.575  65.2  4.09  1.0  296.0     15.3   \n",
+       "\n",
+       "       B  LSTAT  \n",
+       "0  396.9   4.98  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +489,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,17 +503,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r^2 :  0.9825331877979274\n",
-      "Mean Absolute Error:  0.8050173267326721\n",
-      "Mean Squared Error:  1.4109932797029692\n",
-      "Root Mean Squared Error :  1.1878523812759603\n"
+      "r^2 :  0.9826702669109675\n",
+      "Mean Absolute Error:  0.8056262376237603\n",
+      "Mean Squared Error:  1.399919839108909\n",
+      "Root Mean Squared Error :  1.1831820819759353\n"
      ]
     }
    ],
@@ -456,10 +535,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r^2 :  0.9104349718288314\n",
-      "Mean Absolute Error :  2.342882352941176\n",
-      "Mean Squared Error :  8.851477921568632\n",
-      "Root Mean Absolute Error :  2.9751433447093993\n"
+      "r^2 :  0.9077066477425952\n",
+      "Mean Absolute Error :  2.350656862745097\n",
+      "Mean Squared Error :  9.12111106862745\n",
+      "Root Mean Absolute Error :  3.0201177242994106\n"
      ]
     }
    ],
@@ -511,19 +590,19 @@
     {
      "data": {
       "text/plain": [
-       "array([30.282, 27.601, 20.187, 20.823, 20.012, 19.572, 27.758, 18.641,\n",
-       "       20.606, 23.338, 27.889, 30.764, 20.663, 20.176, 20.314, 23.66 ,\n",
-       "       12.042, 41.47 , 24.168, 14.179, 19.975, 16.766, 24.616, 23.735,\n",
-       "       25.956,  9.574, 14.76 , 19.846, 43.79 , 12.283, 26.597, 20.058,\n",
-       "       48.263, 16.185, 23.318, 20.618, 15.575, 32.998, 13.661, 19.806,\n",
-       "       24.382, 23.306, 25.997, 16.142, 16.342, 10.776, 47.223, 11.64 ,\n",
-       "       21.75 , 18.687, 23.753, 21.38 , 25.382, 20.662, 11.363, 23.766,\n",
-       "       11.855, 23.074, 18.624, 42.538, 13.728, 26.379, 12.67 , 14.732,\n",
-       "       17.881, 32.756, 41.944, 24.808, 21.54 , 20.524, 23.861,  6.845,\n",
-       "       18.48 , 21.395, 19.539, 20.577, 41.872, 24.376, 27.64 , 32.593,\n",
-       "       17.108, 20.857, 34.251, 11.497, 25.05 , 26.353, 14.708, 24.865,\n",
-       "       19.794, 17.529, 26.52 , 45.806, 16.449, 21.472, 15.086, 20.924,\n",
-       "       23.847, 23.54 , 42.663, 20.82 , 15.887, 15.811])"
+       "array([29.477, 27.605, 19.205, 20.461, 19.442, 20.114, 28.121, 19.146,\n",
+       "       20.542, 23.076, 29.224, 31.246, 20.789, 20.361, 20.503, 24.455,\n",
+       "       11.901, 41.285, 24.49 , 14.799, 20.417, 16.244, 24.706, 23.877,\n",
+       "       25.865,  9.244, 14.853, 19.853, 42.973, 12.396, 26.933, 19.283,\n",
+       "       47.681, 15.965, 23.307, 20.737, 15.856, 33.04 , 13.179, 19.684,\n",
+       "       24.339, 23.028, 25.524, 16.381, 15.103, 10.594, 47.581, 11.431,\n",
+       "       22.148, 18.6  , 23.249, 21.522, 24.986, 21.196, 10.924, 23.663,\n",
+       "       11.937, 23.109, 18.858, 42.519, 14.522, 26.905, 13.126, 15.201,\n",
+       "       17.413, 32.954, 42.104, 25.45 , 21.596, 20.458, 23.974,  6.919,\n",
+       "       18.301, 21.153, 19.361, 20.742, 43.135, 24.481, 28.781, 33.154,\n",
+       "       17.285, 20.598, 34.035, 11.904, 25.191, 25.637, 14.882, 24.534,\n",
+       "       19.994, 17.161, 27.881, 45.377, 16.484, 21.229, 15.964, 20.807,\n",
+       "       24.798, 23.669, 42.386, 20.879, 15.406, 15.927])"
       ]
      },
      "execution_count": 11,
