--- a/W07D2/W07D2_ML_Deployment.ipynb
+++ b/W07D2/W07D2_ML_Deployment.ipynb
@@ -11,7 +11,7 @@
     "## Lighthouse Labs\n",
     "### W07D2 Deployment of ML Models\n",
     "Instructor: Socorro Dominguez  \n",
-    "June 08, 2021"
+    "July 06, 2021"
    ]
   },
   {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -360,7 +360,7 @@
        "'099'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,9 +383,9 @@
     "\n",
     "1. The endpoint\n",
     "\n",
-    "2. The method\n",
+    "2. The method (verb)\n",
     "\n",
-    "3. The headers\n",
+    "3. The headers (parameters)\n",
     "\n",
     "4. The data (or body)"
    ]
